refactor: clean up Guava removal per code review
- Fix broken indentation in PersonProvider and PlNationalIdentityCardNumberProvider
- Use Validate.notNull/isTrue from commons-lang3 instead of hand-rolled if/throw
- Use StringUtils.isNotEmpty instead of manual null+isEmpty check
- Use Set.of() directly instead of new HashSet<>(Set.of()) for immutable set
- Use List.of() instead of Arrays.asList() for constant lists
- Remove redundant Arrays.asList wrapper around String.split result
- Fix stale comment referencing removed checkArgument